Prevent revocation of active permissions for components when ExtensionSettings policy updates.

Bug: 746017
Change-Id: Ie5d523be0d14323d6fb0e55eaf19efd196b8e100
Reviewed-on: https://chromium-review.googlesource.com/576514
Reviewed-by: Istiaque Ahmed <lazyboy@chromium.org>
Commit-Queue: Nick Peterson <nrpeter@google.com>
Cr-Commit-Position: refs/heads/master@{#487686}
Former-commit-id: 0203be4af060be6e50ced42d50590f2b2ad0aa39